[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "google-drive-export"
version = "0.1.5dev0"
description = "Export and archive Google Drive files"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Corey Goldberg"}]
maintainers = [{name = "Corey Goldberg"}]
readme = "README.md"
requires-python = ">= 3.10"
keywords = ["google", "drive", "google-drive", "archive", "backup", "export", "takeout"]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "google-api-python-client==2.198.0",
    "google-auth-httplib2==0.4.0",
    "google-auth-oauthlib==1.4.0",
]

[project.scripts]
google_drive_export = "google_drive_export:main"

[project.urls]
homepage = "https://github.com/cgoldberg/google-drive-export"
source = "https://github.com/cgoldberg/google-drive-export"
download = "https://pypi.org/project/google-drive-export"

[dependency-groups]
dev = [
    "tox",
]
lint = [
    "ruff",
]
validate = [
    "validate-pyproject[all]",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "F", "I", "FURB", "RUF", "TID", "W"
]
ignore = [
    "RUF012",
]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120
